# home-assistant

./: .HA_VERSION  .gitignore  .gitmodules  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .yamllint  CLAUDE.md  Makefile  Pipfile  config_validator.json  config_validator.yml  configuration.yaml  pyproject.toml  secrets.fake.yaml  sonar-project.properties  ui-lovelace.yaml
.cursor/rules/: git-no-write-commands.mdc  home-assistant-automation-naming.mdc  home-assistant-automation-syntax.mdc  home-assistant-dashboard.mdc  home-assistant-git-deploy.mdc  home-assistant-parallel-sequence-structure.mdc  home-assistant-syntax-cheatsheet.mdc  home-assistant.mdc  lighting-modifier.mdc  lounge-tv-media-entities.mdc
.github/: CODEOWNERS  delete-merged-branch-config.yml  dependabot.yml  labeler.yml  release-drafter.yml  repo_labels.yml
.github/workflows/: actionlint.yml  auto_create_pr.yml  ci_deployment.yml  ci_validation.yml  create_hasspi_pr.yml  create_new_release.yml  delete_pr_branch.yml  dependabot_auto_merge.yml  draft_release.yaml  draft_release.yml  manage_pr.yml  manage_pr_labels.yml  manage_repo_labels.yml  pr_autoupdate.yaml  pr_autoupdate.yml  pr_cleanup.yml  publish_release.yml  run_sonarcloud_scan.yml  set_pr_auto_merge.yml  validate_ha_config.yml  validate_home_assistant_config.yml
.jetbrainsRunConfigurations/: postgres_db_Dockerfile.run.xml  rss_log_feed_Dockerfile.run.xml  yas_209_dlna_bridge_Dockerfile.run.xml
.storage/: lovelace.home_will
addons/rss_log_feed/: Dockerfile  config.yaml  run.sh
addons/yas_209_dlna_bridge/: Dockerfile  config.yaml  run.sh
appdaemon/: appdaemon.yaml  pyproject.toml
appdaemon/apps/: apps.yaml  hello.py
appdaemon/apps/google_fit/: fitness_variables.py
appdaemon/apps/monzo/: credit_card_pot_manager.py
appdaemon/apps/spotify/: process_liked_songs.py  track_processor.py
appdaemon/apps/truelayer/: bank_balance.py
appdaemon/compiled/javascript/: application.js
appdaemon/compiled/javascript/default/: hello_init.js
config/: configuration.yaml  lovelace_main.yaml  lovelace_mobile.yaml  ui-lovelace.yaml
config/includes/: automation.yaml  automations.yaml  binary_sensor.yaml  cover.yaml  device_tracker.yaml  input_boolean.yaml  input_button.yaml  input_datetime.yaml  input_number.yaml  input_select.yaml  input_text.yaml  media_player.yaml  mqtt.yaml  rest_command.yaml  scripts.yaml  sensors.yaml  switch.yaml  templates.yaml  variables.yaml
config/lovelace/: decluttering_templates.yaml  home.yaml  home_control.yaml  london.yaml  media_dashboard.yaml  mobile_dashboard.yaml
config/pyscript/: config.yaml  liked_songs_saver.py  requirements.txt  switchbot_api.py
custom_components/feedparser/: manifest.json  sensor.py
custom_zha_quirks/: aqara_h1_remote.py  ts1201.py
customizations/media_player/: media_player.topaz_sr10.yaml  media_player.yas_209.yaml  yas_209.yaml
dev_tools/: color_generator.py  generate_habit_files.py  hasspi_file_sync.py
dev_tools/add_webhook_to_repo/: add_webhook_to_repo.fish
dev_tools/hasspi_file_sync/: main.py
entities/binary_sensor/: clmtpi_online.yaml  crtpi_online.yaml  growpi_online.yaml  hasspi_online.yaml  mtrxpi_online.yaml  rtropi_online.yaml  st_macbook_pro_online.yaml  vsmppi_online.yaml  will_s_macbook_pro_online.yaml
entities/device_tracker/: bluetooth_le_tracker.yaml
entities/input_boolean/: apollo_ota_mode.yaml  bedroom_entity_header.yaml  debug_with_persistent_notification.yaml  hallway_entity_header.yaml  lounge_entity_header.yaml  lounge_lights_exercise_mode.yaml  lounge_lights_tv_aware.yaml  lounge_shapes_artwork_colour_source_active.yaml  lounge_shapes_artwork_mapping_active.yaml  mini_crt_fan.yaml  mini_crt_power.yaml  octopi_fan.yaml  office_entity_header.yaml  office_shapes_artwork_colour_source_active.yaml  office_shapes_artwork_mapping_active.yaml  prusa_i3_mk3_enclosure_fan.yaml  sync_will_s_desk_state_manager.yaml  turn_off_bedroom_fan_for_scheduled_heating.yaml
entities/input_button/: water_ficus.yaml  water_monstera.yaml  water_pineapple.yaml
entities/input_datetime/: cosmo_nightly_kitchen_clean_time.yaml  ficus_last_watered.yaml  home_assistant_start_time.yaml  last_auto_save.yaml  monstera_last_watered.yaml  next_bedroom_sunrise.yaml  pineapple_last_watered.yaml  rain_flash_cooldown.yaml
entities/input_number/: auto_save_debit_transaction_percentage.yaml  auto_save_minimum.yaml  auto_save_naughty_transaction_percentage.yaml  bedroom_sunrise_duration.yaml  bedroom_sunrise_max_brightness.yaml  cosmo_nightly_kitchen_clean_door_close_timeout.yaml  crt_tv_fan_auto_on_threshold.yaml  electric_blanket_timeout_level_1.yaml  electric_blanket_timeout_level_2.yaml  electric_blanket_timeout_level_3.yaml  hallway_lights_timeout.yaml  hot_water_proximity_distance.yaml  lighting_modifier.yaml  (+14 more)
esphome/: .gitignore  esp32-bluetooth-proxy-377544.yaml  esp32-bluetooth-proxy.yaml  esp32-filament-dry-box.yaml  esp32-moisture-sensor-1.yaml  esp32-moisture-sensor-2.yaml  esp32-moisture-sensor.yaml  office-desk.yaml
esphome_bkp/: esp32-bluetooth-proxy-377544.yaml
includes/: binary_sensor.yaml  cover.yaml  device_tracker.yaml  input_boolean.yaml  input_button.yaml  input_datetime.yaml  input_number.yaml  input_select.yaml  input_text.yaml  media_player.yaml  mqtt.yaml  rest_command.yaml  scripts.yaml  sensors.yaml
integrations/: README.md  api.yaml  automation.yaml  binary_sensor.yaml  cloud.yaml  command_line.yaml  config.yaml  cover.yaml  device_tracker.yaml  folder_watcher.yaml  frontend.yaml  group.yaml  hardware.yaml  history.yaml  homeassistant.yaml  influxdb.yaml  input_boolean.yaml  input_button.yaml  input_datetime.yaml  input_number.yaml  input_select.yaml  input_text.yaml  light.yaml  logbook.yaml  logger.yaml  lovelace.yaml  map.yaml  media_extractor.yaml  media_player.yaml  media_source.yaml  mobile_app.yaml  mqtt.yaml  mqtt_text.yaml  my.yaml  network.yaml  patch_aionanoleaf.yaml  person.yaml  pin_aionanoleaf.yaml  proxmoxve.yaml  pyscript.yaml  (+27 more)
lovelace/: decluttering_templates.yaml
pyscript/: config.yaml  requirements.txt
www/: text-row.js
(+1706 files in other folders)
