[tool.poetry]
name = "ha-appdaemon"
version = "0.1.0"
description = ""
authors = ["Will Garside <worgarside@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
wg-utilities = {extras = ["clients"], version = "^5.1.2"}

[tool.poetry.group.dev.dependencies]
appdaemon = "^4.4.2"
